--- a/index.html
+++ b/index.html
@@ -7,11 +7,19 @@
     <link rel="stylesheet" href="assets/css/tachyons.min.css">
     <link rel="stylesheet" href="assets/css/styles.css"/>
 </head>
-<body class="athelas">
+<body class="muli">
 <div id="quizz-container" class="flex flex-between">
-    <div class="left-block w-50">
-        <div id="img-q0" class="active">
-
+    <div class="left-block w-50 flex">
+        <div id="img-q0" class="active tc justify-center m-auto">
+            <svg class="logo-neo" enable-background="new 0 0 283 337" viewBox="0 0 283 337" xmlns="http://www.w3.org/2000/svg" role="img" aria-labelledby="logoTitle logoDesc">
+                <title id="logoTitle">www.neo-soft.fr</title>
+                <desc id="logoDesc">Néo-Soft Groupe</desc>
+                <g id="logo-graphic">
+                    <path d="m247 211.6c1.5-1.2 3.5-2.9 3.7-4.9.1-1.1-.3-2.2-1.3-3.2-.8-.9-1.7-1.4-2.6-1.4h-.1c-1.6 0-3.2 1.4-4.6 2.7l-3.2 2.9c-25.6 22.9-56 34.3-93.2 34.9-1.3-.1-2.8-.2-4.4-.4-4.5-.3-10.1-.8-15.7-1.7-34.9-6.1-65.5-25.3-86.1-54.1-20.5-28.8-28.8-64-23.3-99 4.8-30.4 19.2-56.7 42.7-78.3 1.6-1.5 3.3-3.1 3.3-4.9 0-1-.4-1.9-1.3-2.9-.8-.9-1.7-1.3-2.7-1.3-1.5 0-3.1 1.1-4.9 2.8-47 42.3-60.5 111.3-32.9 167.8 17.5 35.7 49.3 62.6 87.3 74.1 13.7 4.1 27.6 6.2 41.4 6.2 25 0 49.6-6.7 71.8-19.7 6.7-3.9 12.9-9 19-13.8 2.4-2 4.8-3.9 7.1-5.8"></path>
+                    <path d="m72.6 163.1v-71.6l53.6 73.8c1 1.4 2.8 2 4.6 1.5 1.8-.6 2.9-2.1 2.9-3.9l.1-83v-5.4h-8.3v4.1.1l-.1 71.4-53.5-73.9c-1-1.5-2.8-2-4.6-1.5-1.7.6-2.9 2.1-2.9 3.9v88.4h8.3v-3.9z"></path><path d="m182.4 168.1c18.2 0 33.5-11.5 33.5-25.2.1-13.6-15.9-19.6-31.3-25.4-12.7-4.8-24.8-9.3-24.8-16.8 0-9.3 10.1-16.9 22.5-16.9 10.3 0 19.2 5.3 21.8 12.8.2.7.5 2.1.6 3.7.1 1.2.1 2.2.1 2.9v2.1h8.3v-1.5-3.6c-.2-6.7-3.5-12.9-9.4-17.5-5.8-4.6-13.4-7.1-21.4-7.1-17 0-30.8 11.3-30.8 25.2.1 13.5 15.8 19.3 31.1 25 12.8 4.8 25 9.3 25 17.1 0 9.2-11.5 16.9-25.2 16.9-13.9 0-25.2-7.6-25.2-16.9v-4.7h-8.3v4.7c0 13.9 15 25.2 33.5 25.2"></path>
+                </g>
+                <g id="logo-lettrage" fill="#686868"><path d="m28.7 317.9-24.7-34c-.4-.6-1.2-.9-2-.7l-.3-.5v.6c-.7.3-1.2 1-1.2 1.7v40.8h3.9v-34.8l24.6 34c.4.6 1.2.9 2 .7l.3.4v-.6c.7-.3 1.2-1 1.2-1.7l.1-38.9v-1.9h-3.9z"></path><path d="m41.7 285v38.9c0 1.1.8 1.9 1.9 1.9h29v-3.9h-27v-15.6h19.8v-3.9h-19.8v-15.4h27.1v-3.9h-29c-1.2 0-2 .8-2 1.9"></path><path d="m96 283.1c-10.5 0-19 9.6-19 21.4s8.5 21.4 19 21.4 19-9.6 19-21.4-8.5-21.4-19-21.4m0 3.9c8.4 0 15.1 7.9 15.1 17.5s-6.8 17.5-15.1 17.5c-8.4 0-15.1-7.9-15.1-17.5 0-9.7 6.8-17.5 15.1-17.5"></path><path d="m160.1 302.5c-5.6-2.1-11.4-4.3-11.4-7.7 0-4.3 4.7-7.8 10.4-7.8s10.4 3.5 10.4 7.8v1.9h3.9v-1.9c0-6.4-6.4-11.6-14.2-11.6-7.9 0-14.2 5.2-14.2 11.7 0 6.2 7.3 8.9 14.3 11.6 5.7 2.1 11.5 4.3 11.5 7.9 0 4.1-5.4 7.8-11.6 7.8-6.3 0-11.6-3.6-11.6-7.8v-1.9h-3.9v1.9c0 6.4 6.9 11.6 15.5 11.6 8.4 0 15.5-5.3 15.5-11.6-.2-6.5-7.5-9.3-14.6-11.9"></path><path d="m196.7 283.1c-10.5 0-19 9.6-19 21.4s8.5 21.4 19 21.4 19-9.6 19-21.4-8.5-21.4-19-21.4m0 38.8c-8.3 0-15.1-7.9-15.1-17.5s6.8-17.5 15.1-17.5c8.4 0 15.1 7.9 15.1 17.5.1 9.7-6.7 17.5-15.1 17.5"></path><path d="m249.9 283.1h-.3-25.2c-1.1 0-1.9.8-1.9 1.9v40.8h3.9v-19.4h17.1v-3.9h-17.1v-15.5h23.2.3 14.5v38.9h3.9v-38.9h14.7v-3.9z"></path><path d="m127.9 266h3.3v71h-3.3z"></path></g>
+            </svg>
         </div>
     </div>
     <form name="quizz" class="right-block w-50 flex flex-column vh-100">
@@ -20,72 +28,155 @@
                 <button id="q0-intro" role="button" type="button">Démarrez !</button>
                 <input class="dn" type="radio" value="0-0" checked/>
             </div>
-            <div id="q1" class="question tc">
+            <div id="q1" class="question tc" style="min-width: 500px;">
+                <h2>#VivreALimoges</h2>
                 <p>Sur une échelle de 0 à "Meuh", combien aimez-vous les vaches ?</p>
-                <div class="slidecontainer">
+                <div class="slidecontainer tc ml-auto mr-auto" style="max-width: 500px;">
                     <input type="range" name="vache" min="0" max="10" value="" data-default="5"
                            data-maxValueLabel="Meuh !" class="slider vache"
                            aria-label="De un à dix, combien aimez vous les vaches ?">
                     <p class="slider-value"></p>
                 </div>
-                <input class="dn" type="radio" value="1-1" checked/>
+                <input id="1-1" class="dn" type="radio" value="1-1"/>
+                <input class="dn" type="radio" value="vache-1" checked/>
+                <p id="vache-answer" class="dn">
+                    Les Limougeauds aiment manger, et on peut dire que Limoges met les bouchées doubles pour les satisfaire !<br>
+                    <strong>La Frairie des petits ventres et Toques et Porcelaines</strong> sont 2 événements gastronomiques emblématiques à Limoges.
+                    De plus, la ville compte <strong>pas moins de 150 bars</strong> donc vous aurez toujours un endroit où commencer (ou finir)  votre soirée.
+                </p>
             </div>
             <div id="q2" class="question tc">
-                <p>Sur une échelle de 0 à "Essai !!!", combien aimez-vous le rugby ?</p>
-                <div class="slidecontainer">
-                    <input type="range" name="rugby" min="0" max="10" value="" data-default="5"
-                           data-maxValueLabel="Essai !!!" class="slider vache"
-                           aria-label="De un à dix, combien aimez vous le rugby ?">
-                    <p class="slider-value"></p>
+                <input id="villa-checked" class="dn" type="radio" value="villa-checked"/>
+                <h2>#VivreALimoges</h2>
+                <p>Combien coûte cette magnifique villa de 240m² à 10km de Limoges ?</p>
+                <div class="nested-list-reset mt2 flex flex-row justify-center">
+                    <img class="mr3" src="assets/img/palace.jpg" alt="Villa de 240m²" style="max-width: 35%"/>
+                    <ul class="tl w-30">
+                        <li class="mt2"><label><input type="radio" name="villa[]" value="villa-330000"> 330 000 €</label></li>
+                        <li class="mt2"><label><input type="radio" name="villa[]" value="villa-530000"> 530 000 €</label></li>
+                        <li class="mt2"><label><input type="radio" name="villa[]" value="villa-730000"> 730 000 €</label></li>
+                        <li class="mt2"><label><input type="radio" name="villa[]" value="villa-1300000"> 1 300 000 €</label></li>
+                    </ul>
                 </div>
-                <input class="dn" type="radio" value="2-1" checked/>
+
+                <p id="villa-answer" class="dn">
+                    Limoges est l’une des villes les moins chères de France au m². Profitez-en pour vous faire plaisir !<br>
+                    Comme avec cette magnifique villa de 240m² à 10km de Limoges vendue à 330 000€ !
+                </p>
             </div>
-            <div id="q3" class="question tc">
+
+            <div id="qProfil" class="question tc nested-list-reset">
+                <p>Quel profil êtes-vous ?</p>
+                <ul class="tl">
+                    <li class="mt2"><label><input type="radio" name="profil[]" value="dev"> Développeur</label></li>
+                    <li class="mt2"><label><input type="radio" name="profil[]" value="projet"> Chef de projet</label></li>
+                    <li class="mt2"><label><input type="radio" name="profil[]" value="recruteur"> Recruteur</label></li>
+                    <li class="mt2"><label><input type="radio" name="profil[]" value="cto"> CTO</label></li>
+                    <li class="mt2"><label><input type="radio" name="profil[]" value="ceo"> CEO</label></li>
+                </ul>
+            </div>
+            <div id="qtech" class="question tc nested-list-reset">
                 <pre class="prettyprint"><code class="language-php">
-echo "TOTO";
+echo "Quelles technos pratiquez-vous ?";
                 </code></pre>
-                <input class="dn" type="radio" value="3-1" checked/>
+                <input class="dn" type="radio" value="tech-1" checked/>
+                <ul class="tl">
+                    <li class="mt2"><label><input type="checkbox" name="tech[]" value="PHP"> PHP</label></li>
+                    <li class="mt2"><label><input type="checkbox" name="tech[]" value="Java"> Java</label></li>
+                    <li class="mt2"><label><input type="checkbox" name="tech[]" value="Python"> Python</label></li>
+                    <li class="mt2"><label><input type="checkbox" name="tech[]" value="Symfony"> Symfony</label></li>
+                    <li class="mt2"><label><input type="checkbox" name="tech[]" value="Laravel"> Laravel</label></li>
+                    <li class="mt2"><label><input type="checkbox" name="tech[]" value="jQuery"> jQuery</label></li>
+                    <li class="mt2"><label><input type="checkbox" name="tech[]" value="Angular"> Angular</label></li>
+                    <li class="mt2"><label><input type="checkbox" name="tech[]" value="React"> React</label></li>
+                    <li class="mt2"><label><input type="checkbox" name="tech[]" value="Mysql"> Mysql</label></li>
+                    <li class="mt2"><label><input type="checkbox" name="tech[]" value="PostgreSQL"> PostgreSQL</label></li>
+                    <li class="mt2"><label><input type="checkbox" name="tech[]" value="JohnSnow"> Rien de tout ça</label></li>
+                </ul>
             </div>
-            <div id="fini" class="question tc">
-                <p>C'est fini !</p>
+            <div id="qproj" class="question tc nested-list-reset">
+                <p>Quelle(s) méthode(s) de gestion de projet pratiquez-vous ?</p>
+                <input class="dn" type="radio" value="proj-1" checked/>
+                <ul class="tl">
+                    <li class="mt2"><label><input type="checkbox" name="proj[]" value="V"> Cycle en V</label></li>
+                    <li class="mt2"><label><input type="checkbox" name="proj[]" value="Scrum"> Scrum</label></li>
+                    <li class="mt2"><label><input type="checkbox" name="proj[]" value="Kanban"> Kanban</label></li>
+                    <li class="mt2"><label><input type="checkbox" name="proj[]" value="Agile"> Agile</label></li>
+                    <li class="mt2"><label><input type="checkbox" name="proj[]" value="bordel-organise"> Bordel organisé</label></li>
+                    <li class="mt2"><label><input type="checkbox" name="proj[]" value="rien"> Rien de tout ça</label></li>
+                </ul>
+            </div>
+            <div id="qSujetEntreprise" class="question tc nested-list-reset">
+                <input class="dn" type="radio" value="sujet-1" checked/>
+                <p>Parmi ces sujets, lesquels vous semblent importants ?</p>
+                <ul class="tl">
+                    <li class="mt2"><label><input type="checkbox" name="avantage[]" value="deconnexion"> Droit à la déconnexion <span class="info" title="La messagerie est coupée de 22h à 7h et le dimanche toute la journée">i</span></label></li>
+                    <li class="mt2"><label><input type="checkbox" name="avantage[]" value="periode-essai"> Pas de période d'essai à l'embauche</label></li>
+                    <li class="mt2"><label><input type="checkbox" name="avantage[]" value="teletravail"> Télétravail</label></li>
+                    <li class="mt2"><label><input type="checkbox" name="avantage[]" value="mobilite"> Pas de mobilité</label></li>
+                    <li class="mt2"><label><input type="checkbox" name="avantage[]" value="salaire"> L'évolution salariale</label></li>
+                    <li class="mt2"><label><input type="checkbox" name="avantage[]" value="formation"> Accès aux formations</label></li>
+                    <li class="mt2"><label><input type="checkbox" name="avantage[]" value="greenIT"> GreenIT</label></li>
+                </ul>
+            </div>
+            <div id="fini" class="question tc flex flex-column justify-between">
+                <p>C'est fini ! Merci pour votre participation !</p>
+                <p>
+                    Pourquoi ne pas rester en contact sur
+                    <svg id="Group_1280" class="linkedin-logo" data-name="Group 1280" xmlns="http://www.w3.org/2000/svg" width="267.504" height="65.326" viewBox="0 0 267.504 65.326">
+                        <path id="Path_2514" data-name="Path 2514" d="M203.8,92.5h9.993v36.4h18.5v9.222H203.8Z" transform="translate(-203.8 -82.913)" fill="#0a66c2"></path>
+                        <path id="Path_2515" data-name="Path 2515" d="M322.443,105.384h9.6V136.3h-9.6Zm4.8-15.37a5.569,5.569,0,1,1-5.57,5.569,5.569,5.569,0,0,1,5.57-5.569" transform="translate(-289.532 -81.108)" fill="#0a66c2"></path>
+                        <path id="Path_2516" data-name="Path 2516" d="M506.953,92.486h9.6v27.265l10.88-12.583h11.77l-12.6,14.313,12.335,16.63H526.872l-10.191-15.282h-.126v15.28h-9.6Z" transform="translate(-424.284 -82.906)" fill="#0a66c2"></path>
+                        <path id="Path_2517" data-name="Path 2517" d="M379.2,144.337h9.219v4.225h.131a10.085,10.085,0,0,1,9.09-4.994c9.735,0,11.527,6.405,11.527,14.726v16.954h-9.6V160.217c0-3.588-.066-8.2-5-8.2-4.99,0-5.76,3.907-5.76,7.939v15.288h-9.6Z" transform="translate(-331.366 -120.058)" fill="#0a66c2"></path>
+                        <path id="Path_2518" data-name="Path 2518" d="M639.93,155.719a5.756,5.756,0,0,0-5.894-5.89,6.406,6.406,0,0,0-6.784,5.89Zm8.132,13.7a16.909,16.909,0,0,1-13.128,6.151c-9.6,0-17.286-6.408-17.286-16.331s7.685-16.328,17.286-16.328c8.973,0,14.6,6.4,14.6,16.328v3.01H627.252a7.171,7.171,0,0,0,7.235,6.019,8.193,8.193,0,0,0,6.851-3.778Z" transform="translate(-504.794 -119.581)" fill="#0a66c2"></path>
+                        <path id="Path_2519" data-name="Path 2519" d="M761.844,114.645c-4.8,0-7.68,3.205-7.68,7.875s2.879,7.878,7.68,7.878,7.687-3.2,7.687-7.878-2.881-7.875-7.687-7.875m16.525,23.437h-8.838v-4.1H769.4a12.071,12.071,0,0,1-9.544,4.868c-9.224,0-15.3-6.657-15.3-16.071,0-8.646,5.377-16.585,14.216-16.585,3.973,0,7.684,1.087,9.861,4.1h.126V92.473h9.609Z" transform="translate(-597.094 -82.896)" fill="#0a66c2"></path>
+                        <path id="Path_2520" data-name="Path 2520" d="M958.98,112.559h-9.6V97.525c0-3.585-.064-8.2-4.993-8.2-5,0-5.765,3.906-5.765,7.939v15.294h-9.6V81.642h9.216v4.225h.129a10.1,10.1,0,0,1,9.093-4.994c9.73,0,11.524,6.4,11.524,14.726ZM918.19,77.416a5.571,5.571,0,1,1,5.57-5.572,5.571,5.571,0,0,1-5.57,5.572m4.8,35.143h-9.61V81.642h9.61Zm40.776-55.2h-55.21a4.728,4.728,0,0,0-4.781,4.67v55.439a4.731,4.731,0,0,0,4.781,4.675h55.21a4.741,4.741,0,0,0,4.8-4.675V62.025a4.738,4.738,0,0,0-4.8-4.67" transform="translate(-712.896 -57.355)" fill="#0a66c2"></path>
+                    </svg>
+                    ?</p>
+                <p>
+                    <img src="assets/img/linkedin_qrcode.jpg" style="max-width: 100%; max-height: 60vh;"/>
+                </p>
 
-                <div class="form-group">
-                    <label for="nom">Votre nom</label>
-                    <div class="form-control">
-                        <input type="text" name="nom" id="nom" placeholder="Nom"/>
+                <div class="dn">
+
+                    <div class="form-group">
+                        <label for="nom">Votre nom</label>
+                        <div class="form-control">
+                            <input type="text" name="nom" id="nom" placeholder="Nom"/>
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-group">
-                    <label for="prenom">Votre prénom</label>
-                    <div class="form-control">
-                        <input type="text" name="prenom" id="prenom" placeholder="Prénom"/>
+                    <div class="form-group">
+                        <label for="prenom">Votre prénom</label>
+                        <div class="form-control">
+                            <input type="text" name="prenom" id="prenom" placeholder="Prénom"/>
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-group">
-                    <label for="fonction">Votre fonction</label>
-                    <div class="form-control">
-                        <input type="text" name="fonction" id="fonction" placeholder="Fonction"/>
+                    <div class="form-group">
+                        <label for="fonction">Votre fonction</label>
+                        <div class="form-control">
+                            <input type="text" name="fonction" id="fonction" placeholder="Fonction"/>
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-group">
-                    <label for="email">Votre email</label>
-                    <div class="form-control">
-                        <input type="email" name="email" id="email" placeholder="@"/>
+                    <div class="form-group">
+                        <label for="email">Votre email</label>
+                        <div class="form-control">
+                            <input type="email" name="email" id="email" placeholder="@"/>
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-group">
-                    <label><input type="checkbox" name="accept_coord"> J'accepte de fournir ces informations pour éventuellement être recontacté par le service RH de Néo-Soft.</label>
-                    <p class="hint">Ces données ne sont pas cédées à un tier et vous pouvez exercer votre droit de modification ou de suppression en écrivant à <a href="mailto:emilie.vacher@neo-soft.fr">emilie.vacher@neo-soft.fr</a>.</p>
+                    <div class="form-group">
+                        <label><input type="checkbox" name="accept_coord"> J'accepte de fournir ces informations pour éventuellement être recontacté par le service RH de Néo-Soft.</label>
+                        <p class="hint">Ces données ne sont pas cédées à un tier et vous pouvez exercer votre droit de modification ou de suppression en écrivant à <a href="mailto:emilie.vacher@neo-soft.fr">emilie.vacher@neo-soft.fr</a>.</p>
+                    </div>
                 </div>
 
                 <input class="dn" type="radio" value="3-3" checked/>
             </div>
         </div>
-        <div class="navigation flex flex-justify">
+        <div class="navigation flex flex-justify w-90 tc ml-auto mr-auto mb3">
             <button id="precedent" name="precedent" role="button" type="button" class="w-50">Précédent</button>
             <button id="suivant" name="suivant" role="button" type="button" class="w-50">Suivant</button>
             <button id="soumettre" class="w-50">Valider</button>
